[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
sha2 = "0.10.8"
rand = "0.8"
rand_core = "0.6.4"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "digest"] }
pqcrypto = "0.17.0"
pqcrypto-traits = "0.3.5"
chrono = "*"
zerocopy = "0.7.32"
crypto-hashes = "0.10.0"
time = "0.3.34"
bs58 = "0.5.1"
serde = "1.0.*"
serde_json = "1.0"
digest = "0.10.7"

[profile.test]
# Enable optimizations for tests
opt-level = 3
